price not showing fix

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -139,6 +139,7 @@ body {
 	list-style: none;
 	padding-left: 0;
 	margin-top: 0;
+	display: flex;
 }
 
 .main-navbar-list a {
@@ -170,12 +171,12 @@ body {
 }
 
 .price-comparison-table, th, td {
-	border: 1px solid black;
+	border: 1px solid #ccc;
     border-collapse: collapse;
 }
 
 .price-comparison-table th {
-	min-width: 175px;
+	min-width: 195px;
 	text-align: center;
 	padding: .5rem 0;
 }
@@ -183,6 +184,14 @@ body {
 .price-comparison-table td {
 	text-align: center;
 	padding: .5rem 0;
+}
+
+.price-comparison-table td a {
+	text-decoration: none!important;
+	color: #0b97c4;
+	font-weight: 600;
+	letter-spacing: .25em;
+	font-size: 15px;
 }
 
 .product-content-container {
